--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Adafruit-DHT==1.3.4
 Adafruit-GPIO==1.0.3
 Adafruit-SSD1306==1.6.2
 flake8==3.5.0
+flake8-bugbear==18.8.0
 google-api-python-client==1.7.4
 httplib2==0.11.3
 oauth2client==4.1.2
