--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,6 @@ Pillow==5.2.0
 requests==2.19.1
 RPi.GPIO==0.6.3
 speedtest==0.1.9
+yeelight==0.4.3
 -e git+https://github.com/nicmcd/vcgencmd.git#egg=vcgencmd
 -e git+https://github.com/mjg59/python-broadlink.git#egg=broadlink
