--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,13 @@ sudo: false
 cache: pip
 python:
   - 2.7
-  - 3.3
-  - 3.4
   - 3.5
   - 3.6
   - 3.7-dev
   - pypy
   - pypy3
 install:
-  - if [[ $TRAVIS_PYTHON_VERSION < 3.5 || $TRAVIS_PYTHON_VERSION == 'pypy' ]]; then pip install flake8 pep8-naming;else pip install flake8 pep8-naming flake8-bugbear; fi
+  - if [[$TRAVIS_PYTHON_VERSION == 'pypy' ]]; then pip install flake8 pep8-naming;else pip install flake8 pep8-naming flake8-bugbear; fi
   - flake8 --version
 script:
   - ./tests.sh
