--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
   - pypy
   - pypy3
 install:
-  - if [[$TRAVIS_PYTHON_VERSION == 'pypy' ]]; then pip install flake8 pep8-naming;else pip install flake8 pep8-naming flake8-bugbear; fi
+  - if [[ $TRAVIS_PYTHON_VERSION < 3.5 || $TRAVIS_PYTHON_VERSION == 'pypy' ]]; then pip install flake8 pep8-naming;else pip install flake8 pep8-naming flake8-bugbear; fi
   - flake8 --version
 script:
   - ./tests.sh
