--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-Adafruit-DHT==1.3.4
+Adafruit-DHT==1.4.0
 Adafruit-GPIO==1.0.3
 Adafruit-SSD1306==1.6.2
 flake8==3.6.0
 flake8-bugbear==18.8.0
-google-api-python-client==1.7.4
-httplib2==0.11.3
+google-api-python-client==1.7.7
+httplib2==0.12.0
 oauth2client==4.1.3
 pep8-naming==0.7.0
-Pillow==5.3.0
-requests==2.20.0
-RPi.GPIO==0.6.4
+Pillow==5.4.1
+requests==2.21.0
+RPi.GPIO==0.6.5
 speedtest==0.1.9
 yeelight==0.4.3
--e git+https://github.com/nicmcd/vcgencmd.git#egg=vcgencmd
--e git+https://github.com/mjg59/python-broadlink.git#egg=broadlink
--e git+https://github.com/pimoroni/py-smbus.git#egg=smbus\&subdirectory=library
+-e git+https://github.com/nicmcd/vcgencmd.git@6a8123e52af2de71500ad7e52526c61a5d85ed1a#egg=vcgencmd
+-e git+https://github.com/mjg59/python-broadlink.git@1cceae73eb4f936283c6eaf9eed99f365a37d467#egg=broadlink
+-e git+https://github.com/pimoroni/py-smbus.git@28f25900a2a2f94d8181ce98a7fa6c7f526555e3#egg=smbus\&subdirectory=library
